--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div id="container">
-        <h1 id="title">Gerador de token</h1>
+        <h1 id="title">Senhas da Ladybug</h1>
         <img src="img/token.png" alt="token">
 
         <div id="password_container">
